[gd_scene load_steps=6 format=2]

[ext_resource path="res://Sprite/greenTank2.png" type="Texture" id=1]
[ext_resource path="res://SS/Enemy.gd" type="Script" id=2]

[sub_resource type="AtlasTexture" id=1]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 0, 574, 288, 287 )

[sub_resource type="SpriteFrames" id=2]
animations = [ {
"frames": [ SubResource( 1 ) ],
"loop": true,
"name": "Default",
"speed": 5.0
} ]

[sub_resource type="CapsuleShape2D" id=3]
radius = 31.6708
height = 0.0

[node name="Enemy" type="KinematicBody2D" groups=[
"Enemies",
]]
collision_layer = 15
collision_mask = 2147483663
script = ExtResource( 2 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
scale = Vector2( 0.28, 0.218 )
frames = SubResource( 2 )
animation = "Default"

[node name="Muzzle" type="Position2D" parent="AnimatedSprite"]
position = Vector2( 0, -141.358 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 3 )

[node name="ReloadTime" type="Timer" parent="."]
one_shot = true

[node name="MoveDelay" type="Timer" parent="."]
wait_time = 0.25
one_shot = true
autostart = true
[connection signal="timeout" from="MoveDelay" to="." method="_on_MoveDelay_timeout"]
